--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,20 @@
-body{
+body,html{
+
     margin: 0;
+    padding: 0;
 }
 
 .mainContainer {
+    display: block;
     background-image: url("../src/assets/mountain_lake.jpg");
     background-size: cover;
     height : 100vh;
+    overflow: auto;
+}
+.sidenavbarContainer {
+    display: flex;
+    margin-left: 300px;
+    margin-right: 300px;
 }
 
 footer {height : 200px;}
